--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,7 @@
   },
   "exclude": ["node_modules", ".nuxt", "dist"],
   "vueCompilerOptions": {
-    "plugins": [
-      "@volar/vue-language-plugin-pug"
-    ],
+    "plugins": ["@volar/vue-language-plugin-pug"],
     "target": 2.7
   }
 }
